Break down sooner on vertical orientation, fix spacing between editor and graph

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 
 .ace-container {
   padding: 0 !important;
+  margin-bottom: 12px !important;
 }
 
 .help-row {
